--- a/src/resources/English.properties
+++ b/src/resources/English.properties
@@ -8,3 +8,7 @@ ErrorTitle=Browser Error
 FavoritePromptTitle=Add Favorite
 FavoriteFirstItem=All Favorites
 SetHomeCommand=Set Home
+ErrorOnGo=Could not load %s today!
+NoNext = Nothing next
+NoBack = Nothing back
+NoFav = No favorites
