use reflection to set button handlers, akt16, dm269, aaa53

--- a/src/resources/English.properties
+++ b/src/resources/English.properties
@@ -1,13 +1,13 @@
-BackCommand=Back
-NextCommand=Next
-HomeCommand=Home
-GoCommand=Go
-AddFavoriteCommand=Add Favorites
+BackCommand=Back,back
+NextCommand=Next,next
+HomeCommand=Home,home
+GoCommand=Go,showHandler
+AddFavoriteCommand=Add Favorites,addFavorite
 FavoritePrompt=Enter name
 ErrorTitle=Browser Error
 FavoritePromptTitle=Add Favorite
 FavoriteFirstItem=All Favorites
-SetHomeCommand=Set Home
+SetHomeCommand=Set Home,setHomeCommand
 ErrorOnGo=Could not load %s today!
 NoNext = Nothing next
 NoBack = Nothing back
